Update title and add animation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>test</title>
+    <title>CLIMATWANT</title>
   </head>
   <style>
     .container {
@@ -42,7 +42,7 @@
       }
     }
   </style>
-  <body>
+  <body >
     <div id="root">
       <span class="container">
         <span class="container-animation container-animation1"></span>
